# rpk

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: deploy.yml
docs/guide-book/: book.toml
docs/guide-book/src/: README.md  SUMMARY.md
docs/guide-book/src/cli/: README.md  reflashing.md  remapping.md
docs/guide-book/src/config-file/: README.md  actions.md  firmware.md  global.md  layers.md  matrix.md
docs/guide-book/src/guide/: config-file.md  installation.md  new-keyboard.md
keyboards/rp2040/macropad-3x3/: Cargo.toml  Embed.toml  default-layout.rpk.conf
keyboards/rp2040/macropad-3x3/scripts/: debug.sh
keyboards/rp2040/macropad-3x3/src/: main.rs
keyboards/rp2040/sk84/: Cargo.toml  build.rs  default-layout.conf  default-layout.rpk.conf
keyboards/rp2040/sk84/.cargo/: config.toml
keyboards/rp2040/sk84/src/: main.conf  main.rs
rpk-builder/: Cargo.toml
rpk-builder/chipsets/: rp2040.rs
rpk-builder/src/: lib.rs  rp.rs  usb.rs  usb_test.rs
rpk-common/: Cargo.toml
rpk-common/src/: globals.rs  keycodes.rs  lib.rs  lib_test.rs  math.rs  math_test.rs  mouse.rs  mouse_test.rs  usb_vendor_message.rs
rpk-config/: Cargo.toml
rpk-config/.cargo/: config.toml
rpk-config/src/: builder.rs  compiler.rs  compiler_test.rs  globals.rs  globals_test.rs  keycodes.rs  keycodes_test.rs  lib.rs  lib_test.rs  vendor_coms.rs  vendor_coms_test.rs
rpk-config/tests/: default.conf
rpk-firmware/: Cargo.toml
rpk-firmware/.cargo/: config.toml
rpk-firmware/src/: config.rs  config_test.rs  exec.rs  firmware_functions.rs  flash_test_stub.rs  hid.rs  key_reporter.rs  key_reporter_test.rs  key_scanner.rs  key_scanner_test.rs  layout.rs  layout_test.rs  lib.rs  lib_test.rs  macros.rs  mapper.rs  mapper_test.rs  norflash_ring_fs.rs  norflash_ring_fs_test.rs  ring_fs.rs  switch_test_stub.rs  time_driver_test_stub.rs  transformer.rs  transformer_test.rs  usb.rs  usb_test_stub.rs
rpk-firmware/src/mapper/: config_loader.rs  macros.rs  mouse_test.rs
rpk-firmware/src/transformer/: dual_action.rs  mouse.rs
rpk-macros/: Cargo.toml
rpk-macros/src/: build.rs  build_test.rs  lib.rs
rpk-macros/test/: default-layout.rpk.conf  invalid-layout.rpk.conf
