[package]
name = "rpk-builder"
description = "RPK Keyboard builder"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true

[lib]
bench = false
doctest = false

[dependencies]
defmt = { workspace = true, optional = true}
defmt-rtt = {version = "0.4", optional = true}
portable-atomic = { version = "1", features = ["critical-section"], optional = true }
static_cell = "2"
embassy-executor = { workspace = true, features = ["executor-thread", "executor-interrupt", "integrated-timers"]}
embassy-sync = { workspace = true }
embassy-usb = { workspace = true }
rpk-firmware = { workspace = true }
rpk-macros = { workspace = true }

[dependencies.embassy-rp]
version = "0.2"
features = ["unstable-pac", "time-driver", "critical-section-impl"]
optional = true

[features]
defmt  = ["dep:defmt", "dep:defmt-rtt", "rpk-firmware/defmt"]
rp = ["dep:portable-atomic", "dep:embassy-rp", "embassy-executor/arch-cortex-m"]
reset-on-panic = ["rpk-firmware/reset-on-panic"]
