[package]
name = "rpk-common"
description = "RPK common fields between config tool and firmware builder"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
bench = false
doctest = false
