[package]
name = "rpk-config"
description = "RPK configuration tool"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
bench = false
doctest = false

[dependencies]
anyhow = "1.0.94"
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures-lite = "2.3.0"
lazy_static = "1"
nusb = "0.1"
proc-macro2 = {version = "1.0.92", features = []}
regex = "1"
rpk-common = {version = "0.1", path = "../rpk-common"}

[[bin]]
name = "rpk-config"
bench = false
doctest = false
