[package]
name = "rpk-config"
description = "RPK configuration tool"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
bench = false
doctest = false

[dependencies]
anyhow = "1"
ariadne = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures-lite = "2"
lazy_static = "1"
nusb = "0.1"
rpk-common = {workspace = true}

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "rpk-config"
bench = false
doctest = false
test = true
