[package]
name = "rpk-firmware"
description = "RPK Keyboard firmware"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
bench = false
doctest = true

[dependencies]
defmt = { workspace = true, optional = true}
embassy-time = { workspace = true }
embassy-usb = { workspace = true }
embassy-futures = { workspace = true }
embassy-sync = { workspace = true }
embedded-hal = "1"
embedded-hal-async = "1"
embedded-storage = "0.3"
rpk-common = { workspace = true }

[dev-dependencies]
embassy-time-driver = { workspace = true }
embassy-time-queue-driver = { workspace = true }
rpk-config = { workspace = true }
critical-section = { version = "1", features = ["std"]}

[features]
reset-on-panic = []
defmt = ["dep:defmt", "embassy-time/defmt", "embassy-usb/defmt"]
