[package]
name = "rpk-macros"
description = "RPK macros"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true

[lib]
proc-macro = true
test = true
bench = false
doctest = false

[dependencies]
proc-macro2 = "1"
quote = "1"
regex = "1"
syn = {version = "2", features = ["visit-mut"]}

[dependencies.rpk-config]
version = "0.1"
path = "../rpk-config"

[dev-dependencies.syn]
version = "2"
features = ["extra-traits", "visit"]
