[package]
name = "rpk-macros"
description = "RPK macros"
license.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true

[lib]
proc-macro = true
test = true
bench = false
doctest = false

[dependencies]
proc-macro2 = {workspace = true}
quote = "1"
syn = { workspace = true }
rpk-config =  { workspace = true }

[dev-dependencies.syn]
version = "2"
features = ["extra-traits", "visit"]
