[package]
name = "macropad-3x3"
version = "0.2.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.7", features = ["task-arena-size-32768"] }
embassy-usb = { version = "0.4", features = [
  "max-interface-count-8",
  "max-handler-count-2",
] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-rp = { version = "0.3", features = ["rp2040"] }
rpk-builder = { version = "0.2", features = ["rp"]}

[build-dependencies.rpk-config]
version = "0.2"

[[bin]]
name = "macropad-3x3"
test = false
doctest = false
bench = false

[profile.release]
debug = 0
opt-level = 'z'
lto = true
panic = "abort"

[profile.dev]
debug = 2
opt-level = 'z'
lto = true

[features]
default = ["defmt"]
defmt = ["rpk-builder/defmt"]

[patch.crates-io]
rpk-builder = { path = "../../../rpk-builder" }
rpk-config = { path = "../../../rpk-config" }
