[package]
name = "sk84"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }

defmt = {version = "0.3.8", optional = true}
defmt-rtt = {version = "0.4.1", optional = true}
embassy-rp = { version = "0.2.0", features = [ "unstable-pac", "time-driver", "critical-section-impl"] }
#panic-probe = { version = "0.3", features = ["print-defmt"] }
embassy-usb = { version = "0.3.0", features = [
  "max-interface-count-8",
  "max-handler-count-2",
] }
rpk-firmware = { version = "0.1.0", path = "../../../rpk-firmware", features = ["reset-on-panic"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2.1.0"

[dependencies.rpk-macros]
version = "0.1"
path = "../../../rpk-macros"

[[bin]]
name = "sk84"
path = "src/main.rs"
test = false
doctest = false
bench = false

[profile.release]
debug = 0
lto = true
opt-level = 'z'
strip = true
panic = "abort"

[profile.dev]
debug = 2
lto = true
opt-level = 'z'

[profile.test]
debug = 2
lto = false
opt-level = 0


[features]
defmt  = ["dep:defmt", "dep:defmt-rtt", "rpk-firmware/defmt", "embassy-usb/defmt"]
